Part 1 of Alignment of navigation with Clarity styles #20 https://github.com/vmware/admiral/issues/20 Video: http://engweb.vmware.com/~iilieva/jing/Clarity-Navigation-part1.swf

--- a/ui/app/src/styles/main.scss
+++ b/ui/app/src/styles/main.scss
@@ -985,10 +985,8 @@ $main-list-view-right: 10px;
   }
 }
 
-.app-view > .side-view > .nav-bar {
-  padding-top: 15px;
-  border-radius: 2px 0 0 2px;
-  @include box-shadow(inset -1px 0px 7px 0px rgba(0, 0, 0, 0.20));
+.app-view > .side-view > .sidenav {
+  height: 100%;
 }
 
 .app-view > .side-view .nav-item:not(.inner) > span {
